[gd_scene load_steps=2 format=3 uid="uid://cavs01wj4r6qp"]

[ext_resource type="Script" path="res://PomodoroTimer.gd" id="1_h28fk"]

[node name="Pomodoro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h28fk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pomodoro"

[node name="Time" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ResetBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="SkipBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Skip"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SkipBtn" to="." method="_on_skip_btn_pressed"]
